Tue Jan 26 14:12:56 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Test asking for facets with a
	  cached query id, when none are cached.

Tue Jan 26 14:01:01 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/searchconnection_doctest2.txt,
	  xappy/unittests/facets.py: Fix a couple of facet testcases which
	  got missed.

Tue Jan 26 13:36:59 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Handle case where there are no cached
	  facets for a query, but facets are requested.  Need to add a
	  test for this.

Tue Jan 26 13:04:49 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/mset_search_results.py,
	  xappy/unittests/cached_searches.py: Revert sort order of facet
	  values to be by ascending order of key - putting them in
	  frequency order wasn't particularly helpful, and some external
	  code might depend on the order.  Also makes it easier to merge
	  facet values from multiple databases.

Tue Jan 26 10:51:36 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Add clear_facets method to base
	  class.

Tue Jan 26 09:43:01 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/cachemanager/generic.py,
	  xappy/doctests/searchconnection_doctest2.txt,
	  xappy/mset_search_results.py,xappy/searchconnection.py,
	  xappy/searchresults.py,xappy/unittests/cached_searches.py,
	  xappy/unittests/facets.py: Finish implementing support for facets
	  and stats served from the cache.

Thu Jan 21 16:15:28 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Add support for setting facets and
	  stats individually and accumulating them.

Thu Jan 21 15:32:59 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Ensure that queries actually are
	  connected to the SearchConnection that they're returned from.
